Update TnTColumnBase and TnTGridItemsProviderResult
Updated several files in the project:
- Changed HTML tag for `tnt-header-content` class from `td` to `div` in `TnTColumnBase.razor`.
- Removed `ShowSortIcon` property from `TnTColumnBase<TGridItem>` class in `TnTColumnBase.razor.cs`.
- Added two new using directives `using TnTComponents.Ext;` and `namespace TnTComponents.Grid;` at the top of `TnTGridItemsProviderResult.cs`.

--- a/TnTComponents/Grid/Columns/TnTColumnBase.razor
+++ b/TnTComponents/Grid/Columns/TnTColumnBase.razor
@@ -30,9 +30,9 @@
 
         }
         else {
-            <td class="tnt-header-content">
+            <div class="tnt-header-content">
                 @Title
-            </td>
+            </div>
         }
     }
 
