Update media queries and hover styles in _datagrid.scss
Updated the `_datagrid.scss` file with several changes. Added a media query for small screen sizes that sets the `table-layout` property to `auto`. Modified the `.tnt-compact` class to apply certain styles (`white-space`, `text-overflow`, `overflow`, and `height`) to `td` elements within `tr` elements only on hover. Also added a media query for medium screen sizes and up that reverts the `white-space` and `text-overflow` properties to their initial values on hover.

--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -4,6 +4,10 @@
     border-spacing: 0;
     table-layout: fixed;
 
+    @media #{$small-and-down} {
+        table-layout: auto;
+    }
+
     thead {
         position: sticky;
         top: 0;
@@ -67,17 +71,19 @@
         width: 100%;
 
         tr {
-            td {
-                white-space: nowrap;
-                text-overflow: ellipsis;
-                overflow: clip;
-                height: 32px;
-            }
-
-            &:hover {
                 td {
-                    white-space: revert;
-                    text-overflow: revert;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: clip;
+                    height: 32px;
+                }
+
+            @media #{$medium-and-up} {
+                &:hover {
+                    td {
+                        white-space: revert;
+                        text-overflow: revert;
+                    }
                 }
             }
         }
