--- a/TnTComponents/Buttons/TnTFabButton.razor
+++ b/TnTComponents/Buttons/TnTFabButton.razor
@@ -1,5 +1,6 @@
 ﻿@namespace TnTComponents
-@inherits TnTComponents.Core.TnTComponentBase
+@using TnTComponents.Core
+@inherits TnTPageScriptComponent<TnTFabButton>
 
 <button is="tnt-button"
     @attributes="AdditionalAttributes"
@@ -13,4 +14,4 @@
     @ChildContent
 </button>
 
-<TnTPageScript Src="./_content/TnTComponents/Buttons/TnTButton.razor.js" />
+@RenderPageScript()
