--- a/TnTComponents/Layout/TnTSideNavMenuGroup.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuGroup.razor
@@ -1,5 +1,5 @@
 ﻿@using TnTComponents.Core
-@inherits TnTComponentBase
+@inherits TnTPageScriptComponent<TnTSideNavMenuGroup>
 @namespace TnTComponents
 
 
@@ -18,4 +18,4 @@
 
 </tnt-side-nav-menu-group>
 
-<TnTPageScript Src="./_content/TnTComponents/Layout/TnTSideNavMenuGroup.razor.js" />
+@RenderPageScript()
