Added Typeahead functionality and related updates
Implemented Typeahead functionality by adding a new `TnTTypeahead` component in `Typeahead.razor` file. This component takes `SearchFunc` and `ItemSelected` as parameters and includes a new `Item` class with `Name`, `Email`, and `Age` properties. The `OnInitialized` method has been updated to populate the `Items` list with 100 items and a new `SearchFunc` method has been added for item filtering.

The `MainLayout.razor` file now includes a new `TnTSideNavMenuLink` for the Typeahead page.

A new `TnTTypeahead.razor` file has been added, defining the `TnTTypeahead` component with various parameters and methods.

Added a new `_typeahead.scss` file for CSS styles specific to the `TnTTypeahead` component and updated the `style.scss` file to import these new styles.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -80,6 +80,9 @@
         <TnTSideNavMenuLink Icon="MaterialIcon.ShoppingBasket" Href="/skeleton">
             Skeleton
         </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="MaterialIcon.MergeType" Href="/typeahead">
+            Typeahead
+        </TnTSideNavMenuLink>
     </TnTSideNav>
 
     <TnTBody>
