--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -20,6 +20,7 @@
 @import 'TnTComponents/_snackbar.scss';
 @import 'TnTComponents/_datagrid.scss';
 @import 'TnTComponents/_chips.scss';
+@import 'TnTComponents/_typeahead.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
