Add `BackgroundColor` attribute to `TnTLabel` component
In this commit, a new attribute `BackgroundColor` has been added to the `TnTLabel` component in the `TnTTypeahead.razor` file. This attribute is set to the value of `LabelBackgroundColor`. Additionally, a new property `LabelBackgroundColor` of type `TnTColor?` has been added to the `TnTTypeahead.razor.cs` file. This property is decorated with the `[Parameter]` attribute, allowing it to be used as a parameter in the component. This new property enables users to set the background color of the label in the `TnTTypeahead` component.

--- a/TnTComponents/Form/TnTTypeahead.razor
+++ b/TnTComponents/Form/TnTTypeahead.razor
@@ -7,7 +7,7 @@
 <div class="tnt-typeahead">
     <div class="tnt-typeahead-box">
         @if (Label is not null) {
-            <TnTLabel Label="@Label">
+            <TnTLabel Label="@Label" BackgroundColor="LabelBackgroundColor">
                 @((RenderFragment)RenderInputBox)
             </TnTLabel>
         }
