--- a/TnTComponents/Grid/TnTDataGrid.razor
+++ b/TnTComponents/Grid/TnTDataGrid.razor
@@ -79,9 +79,9 @@
         var rowStyle = RowStyle?.Invoke(item) ?? null;
         Loading = false;
         <TnTDataGridRow @key="@(ItemKey(item))"
-            aria-rowindex="@rowIndex" 
-            class="@rowClass" 
-            style="@CssStyleBuilder.Create().AddStyle(rowStyle, null).AddStyle("height", $"{ItemSize}px").Build()" OnClick="@OnRowClicked" TGridItem="TGridItem" Item="@item">
+                        aria-rowindex="@rowIndex"
+                        class="@rowClass"
+                        style="@CssStyleBuilder.Create().AddStyle(rowStyle, null).AddStyle("height", $"{ItemSize}px").Build()" OnClick="@OnRowClicked" TGridItem="TGridItem" Item="@item">
             @for (var colIndex = 0; colIndex < _columns.Count; colIndex++) {
                 var col = _columns[colIndex];
 
@@ -142,6 +142,7 @@
     }
 
     private void RenderLoadingContent(RenderTreeBuilder __builder) {
+        Console.WriteLine("Rendering Loading Content");
         <TnTDataGridRow TGridItem="TGridItem" Class="loading-content-row">
             <TnTDataGridCell Class="loading-content-cell">
                 @if (LoadingContent is null) {
