--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -71,12 +71,12 @@
         width: 100%;
 
         tr {
-                td {
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                    overflow: clip;
-                    height: 32px;
-                }
+            td {
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: clip;
+                height: 32px;
+            }
 
             @media #{$medium-and-up} {
                 &:hover {
@@ -105,85 +105,24 @@
             td {
                 box-sizing: border-box;
                 padding: 0.1rem 0.25rem;
+
+                &:empty {
+                    position: relative;
+
+                    &::before {
+                        position: absolute;
+                        content: '';
+                        background: linear-gradient(to right, transparent 33%, color-mix(in srgb, transparent 60%, $tnt-color-inverse-surface) 50%, transparent 66%);
+                        background-size: 300%;
+                        animation: tnt-skeleton-animation 1.5s infinite ease-in-out;
+                        width: 100%;
+                        height: 100%;
+                        top:0;
+                        left:0;
+                        transform: scaleX(0.9) scaleY(0.75);
+                    }
+                }
             }
         }
     }
 }
-//    thead {
-//        position: sticky;
-//        top: 0;
-//        background-color: $tnt-color-surface-container-highest;
-//        box-shadow: 0px 1px $tnt-color-outline;
-//        z-index: 3;
-//        text-overflow: ellipsis;
-//        white-space: nowrap;
-//        tr {
-//            th {
-//                padding: 0.5rem 2rem;
-//                margin: 0;
-//                position: relative;
-//                user-select: none;
-//                min-width: 1rem;
-//                text-align: center;
-//                @extend .tnt-title-medium;
-//                .tnt-resizeable {
-//                    position: absolute;
-//                    top: 0;
-//                    right: 0;
-//                    width: 5px;
-//                    background-color: transparent;
-//                    cursor: col-resize;
-//                    border-right: 1px solid $tnt-color-outline;
-//                }
-//                .tnt-resizing {
-//                    border-right: 2px solid $tnt-color-primary;
-//                }
-//                &.tnt-sortable {
-//                    cursor: pointer;
-//                    transition: color ease-in-out 200ms;
-//                    &:hover {
-//                        color: $tnt-color-primary;
-//                    }
-//                }
-//                &.tnt-sorted-asc, &.tnt-sorted-desc {
-//                    color: $tnt-color-secondary;
-//                    span.tnt-icon {
-//                        color: $tnt-color-secondary;
-//                        float: right;
-//                        transition: 200ms;
-//                    }
-//                }
-//                &.tnt-sorted-asc span.tnt-icon {
-//                    transform: rotateZ(180deg);
-//                }
-//            }
-//        }
-//    }
-//    tbody {
-//        tr {
-//            background-color: $tnt-color-surface;
-//            td {
-//                padding: 0.5rem;
-//                min-width: 1rem;
-//                white-space: nowrap;
-//                @extend .tnt-body-medium;
-//            }
-//        }
-//    }
-//}
-//&.tnt-alternative {
-//    tbody {
-//        tr:nth-child(even) {
-//            background-color: $tnt-color-surface-variant;
-//        }
-//    }
-//}
-//&.tnt-interactive {
-//    tr:has(td) {
-//        transition: 150ms ease-in-out;
-//        &:hover {
-//            cursor: pointer;
-//            background-color: color-mix(in srgb, $tnt-color-on-surface 25%, transparent);
-//        }
-//    }
-//}
