--- a/TnTComponents/Styles/TnTComponents/_typeography.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeography.scss
@@ -90,7 +90,7 @@ $tnt-typescale-title-small-font-size: 14px;
 $tnt-typescale-title-small-line-height: 20px;
 $tnt-typescale-title-small-letter-spacing: 0.10px;
 
-tnt-display-large {
+.tnt-display-large {
     font-family: $tnt-typescale-display-large-font-family-name;
     font-weight: $tnt-typescale-display-large-font-weight;
     font-size: $tnt-typescale-display-large-font-size;
