--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -4,6 +4,10 @@
     border-spacing: 0;
     table-layout: fixed;
 
+    &.tnt-loading {
+        opacity: 0.3;
+    }
+
     @media #{$small-and-down} {
         table-layout: auto;
     }
@@ -36,13 +40,11 @@
                 }
 
                 &.tnt-col-sortable {
-
-                    &:hover {
-                        background-color: $tnt-color-surface-container;
-                        opacity: 0.8;
-                    }
-
-                    cursor: pointer;
+                    //&:hover {
+                    //    background-color: $tnt-color-surface-container;
+                    //    opacity: 0.8;
+                    //}
+                    //cursor: pointer;
 
                     .tnt-sorted-on {
                         color: $tnt-color-secondary;
@@ -93,15 +95,6 @@
         tr {
             background-color: $tnt-color-surface-container-lowest;
 
-            &.tnt-clickable {
-                transition: background-color ease-in-out 200ms;
-                cursor: pointer;
-
-                &:hover {
-                    background-color: color-mix(in srgb, $tnt-color-surface-tint 25%, transparent);
-                }
-            }
-
             td {
                 box-sizing: border-box;
                 padding: 0.1rem 0.25rem;
@@ -117,11 +110,31 @@
                         animation: tnt-skeleton-animation 1.5s infinite ease-in-out;
                         width: 100%;
                         height: 100%;
-                        top:0;
-                        left:0;
+                        top: 0;
+                        left: 0;
                         transform: scaleX(0.9) scaleY(0.75);
                     }
                 }
+            }
+        }
+    }
+
+    &:not(.tnt-loading) {
+        thead tr.tnt-data-grid-header th.tnt-col-sortable {
+            &:hover {
+                background-color: $tnt-color-surface-container;
+                opacity: 0.8;
+            }
+
+            cursor: pointer;
+        }
+
+        tbody tr.tnt-clickable {
+            transition: background-color ease-in-out 200ms;
+            cursor: pointer;
+
+            &:hover {
+                background-color: color-mix(in srgb, $tnt-color-surface-tint 25%, transparent);
             }
         }
     }
