--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -43,6 +43,11 @@
 
 </TnTForm>
 
+<TnTInputCurrency @bind-Value="_currencyValue" TCurrency="decimal"/>
+
+Currency
+@(_currencyValue)
+Value
 
 @code {
 
