--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -17,6 +17,9 @@
         <TnTSideNavMenuLink Icon="MaterialIcon.Home" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
             Home
         </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="MaterialIcon.PermContactCalendar" Href="/scheduler" Match="NavLinkMatch.All" Status="100">
+            Scheduler
+        </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="MaterialIcon.Error" Href="/Buttons">
             Buttons
         </TnTSideNavMenuLink>
