--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -21,6 +21,7 @@
 @import 'TnTComponents/_datagrid.scss';
 @import 'TnTComponents/_chips.scss';
 @import 'TnTComponents/_typeahead.scss';
+@import 'TnTComponents/_scheduler.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
