--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -14,7 +14,7 @@
         min-height: 20%;
         max-height: 75%;
         min-width: 25%;
-        overflow: auto;
+        overflow-y:auto;
         z-index: 2001;
         transition: 200ms ease-in-out;
         animation: dialogGrow 100ms ease-in-out forwards;
