--- a/TnTComponents/Scheduler/Infrastructure/TnTScheduledEvent.razor
+++ b/TnTComponents/Scheduler/Infrastructure/TnTScheduledEvent.razor
@@ -1,7 +1,7 @@
 ﻿@typeparam TEventType
 
 
-<div @attributes="AdditionalAttributes" class="tnt-event" tnt-start-time="@(Event.Start?.ToString("yyyy-MM-ddTHH:mm"))" tnt-end-time="@(Event.End?.ToString("yyyy-MM-ddTHH:mm"))">
+<div @attributes="AdditionalAttributes" class="tnt-event" style="@CssStyle" tnt-start-time="@(Event.Start?.ToString("yyyy-MM-ddTHH:mm"))" tnt-end-time="@(Event.End?.ToString("yyyy-MM-ddTHH:mm"))">
     @if (EventTemplate is not null) {
         @EventTemplate(Event)
     }
