--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -1,97 +1,71 @@
-﻿.tnt-scheduler {
+﻿$border-color: color-mix(in srgb, $tnt-color-outline 15%, transparent);
+
+.tnt-scheduler {
+    width: 100%;
+    overflow-y: auto;
+    padding: 0.5rem;
+    box-sizing: border-box;
 
     .tnt-day-view {
     }
 
     .tnt-week-view {
-        overflow: auto;
-        padding: 0.5rem;
-        position: relative;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        min-width: #{$medium-screen-up};
 
-        .tnt-week-view-table {
-            table-layout: fixed;
-            width: 100%;
-            min-width: #{$medium-screen-up};
-            border-collapse: collapse;
-            user-select: none;
+        .tnt-slot {
+            height: 1.5rem;
+        }
 
-            thead {
-                user-select: inherit;
-
-                tr {
-                    user-select: inherit;
-
-                    th {
-                        user-select: inherit;
-                        pointer-events: inherit;
-                        border: none;
-                        @extend .tnt-label-large;
-                    }
-                }
-            }
-
-            tbody {
-                user-select: inherit;
-
-                tr {
-                    user-select: inherit;
-
-                    td {
-                        background-color: $tnt-color-surface-container-highest;
-                        user-select: inherit;
-
-                        &.disabled {
-                            background-color: $tnt-color-surface-container-lowest;
-                        }
-
-                        &.tnt-time-slot {
-                            border: none;
-                            text-align: right;
-                        }
-
-                        &.tnt-day-slot {
-                            outline: 1px solid color-mix(in srgb, $tnt-color-outline 10%, transparent);
-
-                            &:not(.disabled) {
-                                &:hover {
-                                    cursor: pointer;
-                                    background-color: color-mix(in srgb, $tnt-color-surface-tint 30%, transparent);
-                                }
-                            }
-                        }
-                    }
-                }
-
-                tr:first-child {
-                    td:first-child {
-                        border-start-start-radius: 1rem;
-                    }
-
-                    td:last-child {
-                        border-start-end-radius: 1rem;
-                    }
-                }
-
-                tr:last-child {
-                    td:first-child {
-                        border-end-start-radius: 1rem;
-                    }
-
-                    td:last-child {
-                        border-end-end-radius: 1rem;
-                    }
-                }
-            }
+        .tnt-time-slots {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            width: 5rem;
+            padding-right: 0.25rem;
+            box-sizing: border-box;
+            position: sticky;
+            left: 0;
+            background-color: $tnt-color-surface;
 
             .tnt-time-slot {
-                width: 5rem;
-                padding-right: 0.25rem;
-                @extend .tnt-label-large;
+                display: flex;
+                align-items: center;
             }
         }
 
-        .tnt-event {
-            position: absolute;
+        .tnt-days {
+            display: flex;
+            flex-direction: row;
+            width: calc(100% - 5rem);
+
+            .tnt-day-column {
+                width: 14.3%;
+
+                span {
+                    display: block;
+                    text-align: center;
+                }
+
+                .tnt-day-slot {
+                    outline: 1px solid $border-color;
+                    box-sizing: border-box;
+                    background-color: $tnt-color-surface-container-lowest;
+
+                    &.disabled {
+                        background-color: $tnt-color-surface-container-highest;
+                    }
+
+                    &:not(.disabled) {
+                        &:hover {
+                            cursor: pointer;
+                            background-color: color-mix(in srgb, $tnt-color-surface-tint 30%, transparent);
+                        }
+                    }
+                }
+            }
         }
     }
 
