--- a/TnTComponents/Scheduler/TnTScheduler.razor
+++ b/TnTComponents/Scheduler/TnTScheduler.razor
@@ -1,12 +1,11 @@
 ﻿@namespace TnTComponents
-@using TnTComponents.Core
 @using TnTComponents.Scheduler.Infrastructure
+@inherits SchedulerBase
 @typeparam TEventType
-@inherits TnTSchedulerBase
+
 
 <div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
-    <CascadingValue Value="this" IsFixed="true">
-        @ChildContent
-    </CascadingValue>
+<CascadingValue Value="this" IsFixed="true" TValue="SchedulerBase">
+    @ChildContent
+</CascadingValue>
 </div>
-
