--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -1,74 +1,54 @@
-﻿$border-color: color-mix(in srgb, $tnt-color-outline 15%, transparent);
-
-.tnt-scheduler {
+﻿.tnt-scheduler {
+    overflow: auto;
     width: 100%;
-    overflow-y: auto;
-    padding: 0.5rem;
+    display: block;
     box-sizing: border-box;
-
-    .tnt-day-view {
-    }
+    padding: 0.5rem;
 
     .tnt-week-view {
+        width: 100%;
+        min-width: $small-screen-up;
         display: flex;
         flex-direction: row;
-        width: 100%;
-        min-width: #{$medium-screen-up};
 
         .tnt-slot {
             height: 1.5rem;
         }
 
+        .tnt-header-slot {
+            height: 3rem;
+            text-align: center;
+        }
+
         .tnt-time-slots {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
             width: 5rem;
-            padding-right: 0.25rem;
-            box-sizing: border-box;
-            position: sticky;
-            left: 0;
-            background-color: $tnt-color-surface;
 
             .tnt-time-slot {
-                display: flex;
-                align-items: center;
+                text-align: right;
+                box-sizing: border-box;
+                padding-right: 0.5rem;
             }
         }
 
-        .tnt-days {
-            display: flex;
-            flex-direction: row;
-            width: calc(100% - 5rem);
+        .tnt-slot-column {
+            width: calc(calc(100% - 5rem) / 7);
 
-            .tnt-day-column {
-                width: 14.3%;
 
-                span {
-                    display: block;
-                    text-align: center;
+            .tnt-day-slot:not(.tnt-header-slot) {
+                outline: 1px solid color-mix(in srgb, $tnt-color-outline 15%, transparent);
+                background-color: $tnt-color-surface-container-lowest;
+
+                &.disabled {
+                    background-color: $tnt-color-surface-container-highest;
                 }
 
-                .tnt-day-slot {
-                    outline: 1px solid $border-color;
-                    box-sizing: border-box;
-                    background-color: $tnt-color-surface-container-lowest;
-
-                    &.disabled {
-                        background-color: $tnt-color-surface-container-highest;
-                    }
-
-                    &:not(.disabled) {
-                        &:hover {
-                            cursor: pointer;
-                            background-color: color-mix(in srgb, $tnt-color-surface-tint 30%, transparent);
-                        }
+                &:not(.disabled) {
+                    cursor: pointer;
+                    &:hover{
+                        background-color: color-mix(in srgb, $tnt-color-surface-tint 30%, transparent);
                     }
                 }
             }
         }
-    }
-
-    .tnt-month-view {
     }
 }
