Update CSS properties in _layout.scss for better layout control
Updated the _layout.scss file to improve layout control. Added `overflow-x` property to `tnt-side-nav` class to prevent horizontal scrolling. Replaced `margin-top` and `margin-bottom` with `padding-top` and `padding-bottom` respectively in `tnt-body` class within elements having `tnt-header` and `tnt-footer` to add space inside the `tnt-body` content.

--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -4,6 +4,7 @@
     tnt-side-nav {
         transition: 200ms ease-in-out;
         overflow-y: auto;
+        overflow-x: hidden;
     }
 
     tnt-header, tnt-footer {
@@ -141,11 +142,11 @@
     }
 
     &:has(tnt-header) tnt-body {
-        margin-top: $tnt-header-height;
+        padding-top: $tnt-header-height;
     }
 
     &:has(tnt-footer) tnt-body {
-        margin-bottom: $tnt-footer-height;
+        padding-bottom: $tnt-footer-height;
     }
 
     &:has(tnt-header):has(tnt-footer) {
