--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -10,7 +10,6 @@
         min-width: $small-screen-up;
         display: flex;
         flex-direction: row;
-        position: relative;
 
         .tnt-slot {
             height: 1.5rem;
@@ -54,6 +53,12 @@
 
         .tnt-event {
             position: absolute;
+            opacity: 0;
+            transition: 150ms ease-in-out;
+            background-color: $tnt-color-tertiary;
+            color: $tnt-color-on-tertiary;
+            padding: 0 0.25rem;
+            box-sizing: border-box;
         }
     }
 }
