Added new features and improved UI in scheduling components
A new extension method `ToDateTime` was added to the `DateTimeExt` class for converting `DateOnly` objects to `DateTime`. In `SchedulerBase.cs`, a new method `GetEventsForDate` was added to retrieve all events for a given date. The `TnTScheduledEvent.razor` component now inherits from `TnTPageScriptComponent<TnTScheduledEvent>`. Several changes were made to `TnTScheduledEvent.razor.cs`, including the removal of `_element` and `_jsRuntime` private fields, addition of new properties, and updates to the `OnAfterRenderAsync` method. New JavaScript functions were added to `TnTScheduledEvent.razor.js` to handle the component's lifecycle. The rendering of `TnTScheduledEvent` components in `TnTWeekView.razor` was moved inside the loop over dates. The `CalculateEventBoundingRect` method in `TnTWeekView.razor.cs` was updated for better event time calculation and null handling. Lastly, several updates were made to `_scheduler.scss` for improved UI, including the addition of a new `FadeIn` animation.

--- a/TnTComponents/Scheduler/Infrastructure/TnTScheduledEvent.razor
+++ b/TnTComponents/Scheduler/Infrastructure/TnTScheduledEvent.razor
@@ -1,4 +1,5 @@
-﻿
-<div class="tnt-components tnt-event tnt-corner-radius-1" @ref="_element">
+﻿@using TnTComponents.Core
+@inherits TnTPageScriptComponent<TnTScheduledEvent>
+<div class="tnt-components tnt-event tnt-corner-radius-1" @ref="Element">
     @Event.Title
 </div>
