Updated rendering, added overlapping events methods, and CSS changes
In this commit, several updates have been made across multiple files. In `Scheduler.razor`, the render mode has been switched from `InteractiveServer` to `InteractiveAuto`. New methods `GetOverlappingEvents` and `Overlaps` have been added in `SchedulerBase.cs` and `TnTEvent.cs` respectively to handle overlapping events. `TnTComponents.Core` directive and dynamic CSS class and style generation have been introduced in `TnTScheduledEvent.razor.cs`. A console log line has been removed from `TnTWeekView.razor` and `_rows` and `_columns` fields have been made readonly in `TnTWeekView.razor.cs`. Lastly, `.tnt-event` CSS in `_scheduler.scss` has been updated with changes in `opacity`, `animation`, and removal of `transition` property.

--- a/LiveTest/LiveTest.Client/Pages/Scheduler.razor
+++ b/LiveTest/LiveTest.Client/Pages/Scheduler.razor
@@ -1,7 +1,7 @@
 ﻿@page "/scheduler"
 @using TnTComponents
 @using TnTComponents.Scheduler
-@rendermode InteractiveServer
+@rendermode InteractiveAuto
 
 <h3>Scheduler</h3>
 
