Updated Week view to be in the TnTComponents namespace. Renamed WeekView to TnTWeekView

--- a/LiveTest/LiveTest.Client/Pages/Scheduler.razor
+++ b/LiveTest/LiveTest.Client/Pages/Scheduler.razor
@@ -27,7 +27,7 @@
               TEventType="TnTEvent"
               TasksList="TasksList.ToArray()"
               DisplayedView="DisplayedView.Weekly">
-    <WeekView PriorityDisplay="@PriorityDisplay"
+    <TnTWeekView PriorityDisplay="@PriorityDisplay"
               OutsideCurrentMonthClick="OutsideCurrentMonthClick"
               TaskClick="TaskClick"
               DayClick="DayClick"
