--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -1,7 +1,8 @@
 ﻿@using System.Globalization
+@using BlazorCalendar
 @using BlazorCalendar.Models
 @using BlazorCalendar.Styles
-@namespace BlazorCalendar
+@namespace TnTComponents
 @inherits CalendarBase
 
 @{
